# TPE-PROTOS

./: .gitignore  CMakeLists.txt  Makefile  README.md  admin_client  build.sh  main  relay.patch  socks5d  test.sh  users.txt
src/: admin.c  admin.h  buffer.h  main.c  managment.c  metrics.c  metrics.h  selector.c  selector.h  socks5.c  socks5.h  stm.c
src/admin/: access.txt  admin.c  admin.h  admin_client.c  admin_client.h  admin_logs.c  admin_logs.h  admins.txt
src/args/: args.c  args.h
src/authentication/: authentication.c  authentication.h  authentication_parser.c  authentication_parser.h  users.txt
src/greeting/: greeting.c  greeting.h  hello.c  hello.h
src/logging/: logger.c  logger.h
src/management/: management.c  management.h  managment.c  managment.h
src/metrics/: metrics.c  metrics.h
src/negotiation/: negotiation.c  negotiation.h  negotiation_parser.c  negotiation_parser.h
src/parser/: parser.c  parser_utils.c
src/relay/: relay.c  relay.h
src/request/: request.c  request.h  request_parser.c  request_parser.h
src/selector/: selector.c
src/socks5/: socks5.c  socks5.h
src/stm/: stm.h  stm_test.c
src/users/: user_manager.h
test_results/: detailed_report.txt  results.tmp
